--- a/styles/servicios.css
+++ b/styles/servicios.css
@@ -396,6 +396,21 @@ p {
     }
 }
 
+.return-button {
+    position: absolute;
+    top: 2%;
+    left: 2%;
+    z-index: 2;
+    background-color: #6e5885;
+    border: none;
+    cursor: pointer;
+    color: #fff;
+    font-size: 1.5rem;
+    border-radius: 50%;
+    padding: 0.5rem;
+    transition: background-color 0.3s ease;
+}
+
 
 
 h1 {
